<resources>
    <string name="app_name">SD Bags</string>
    <string name="already_have_an_account_login">Already have an account? login.</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_me">Remember me</string>
    <string name="i_m_an_admin">I\'m an admin</string>
    <string name="i_m_not_an_admin">I\'m not an admin</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password_hint">password</string>
    <string name="name_register">Name</string>
</resources>