<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity2">


    <ImageView
        android:id="@+id/login_appLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_appLogo"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_phone_number_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"

        android:background="@drawable/input_design"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold" />
    <LinearLayout

        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_chkb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Material.Drawable.CheckBox"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimaryDark"
            app:cbd_strokeColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="17dp"


            android:layout_marginStart="17dp" />

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp" />
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@id/linear_layout_1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_design"
        android:padding="17dp"

        android:layout_above="@+id/main_login_button"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I'm an admin"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_btn"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginEnd="23dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"
        android:layout_alignRight="@id/login_btn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="23dp"
        android:layout_marginStart="80dp"
        android:layout_alignEnd="@id/login_btn" />

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_m_not_an_admin"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_btn"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginStart="25dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginRight="23dp"
        android:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="23dp" />

</RelativeLayout>